--- a/angular.json
+++ b/angular.json
@@ -33,6 +33,7 @@
               "node_modules/primeicons/primeicons.css",
                 "node_modules/primeng/resources/themes/lara-light-blue/theme.css",
                 "node_modules/primeng/resources/primeng.min.css",
+                  "node_modules/ngx-toastr/toastr.css",
               "src/styles.scss"
             ],
             "scripts": []
