--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "angularx-qrcode": "^20.0.0",
     "bootstrap": "^5.3.7",
     "chart.js": "^4.5.0",
     "ngx-toastr": "^16.2.0",
