--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "angularx-qrcode": "^20.0.0",
     "bootstrap": "^5.3.7",
     "chart.js": "^4.5.0",
+    "jspdf": "^3.0.2",
     "ngx-toastr": "^16.2.0",
     "primeicons": "^7.0.0",
     "primeng": "^16.9.1",
